# geoai

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CNAME  Dockerfile  ExploreClay.ipynb  LANDCOVER_ENHANCEMENTS.md  LICENSE  MANIFEST.in  README.md  TESTING_REPORT.md  TestClay.py  TestClay_GeoAI.py  TestGeoAI_Clay.py  index.html  index.md  landcover_utils.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_ptv3.txt  setup.cfg  setup.py  sitemap.xml  test_geoai_demo.ipynb  test_super_resolution_standalone.py  test_wms_wmts.py  zensical.toml
GeoIA-Pasto/: README.md
agent-harness/: GEOAI.md  conftest.py  pytest.ini  setup.py
auto/: index.html
canopy/: index.html
caption/: index.html
change_detection/: index.html
changelog/: index.html
citations/: index.html
classify/: index.html
clay_testing_temp/: analyze_embedding_patterns.py  compare_embeddings.py  compare_embeddings_detailed.py  compare_embeddings_exact.py  debug_metadata.py  final_comparison.py  final_verification_summary.py  simple_allclose_test.py  simple_allclose_test_all_tokens.py  test_random_data.py  verify_all_embeddings.py  verify_functional_equivalence.py  verify_processing_order.py
cli/: index.html
cloudmask/: index.html
common/: common.md  index.html
contributing/: index.html
detectron2/: index.html
dinov3/: index.html
docs/: CNAME  auto.md  canopy.md  caption.md  change_detection.md  changelog.md  citations.md  classify.md  cli.md  cloudmask.md  contributing.md  detectron2.md  dinov3.md  download.md  embeddings.md  esrgan.md  extract.md  foundation_models.md  ftw.md  geo_agents.md  geoai.md  geodeep.md  hf.md  index.md  inference.md  installation.md  landcover_train.md  landcover_utils.md  map_tools.md  map_widgets.md  moondeream.md  moondream.md  multiclean.md  networks.md  object_detect.md  onnx.md  pointcloud.md  preprocess.md  prithvi.md  qgis_plugin.md  (+18 more)
download/: index.html
embeddings/: index.html
esrgan/: index.html
examples/: AI_agents.ipynb  DINOv3.ipynb  DINOv3_visualization.ipynb  JPEG2000.ipynb  README_FOCAL_LOSS.md  STAC_agents.ipynb  _template.ipynb  building_detection_lidar.ipynb  building_footprints_africa.ipynb  car_detection.ipynb  catalog_search_agent.ipynb  change_detection.ipynb  changestar.ipynb  clean_segmentation_results.ipynb  cloud_detection.ipynb  download_data.ipynb  field_boundary_detection.ipynb  google_satellite_embedding.ipynb  image_captioning.ipynb  image_tiling.ipynb  impervious_surface_mapping.ipynb  jupytext.toml  load_model_checkpoint.ipynb  moondream.ipynb  object_detection_nwpu.ipynb  planetary_computer.ipynb  regularization.ipynb  road_network_simplification.ipynb  samgeo.ipynb  ship_detection.ipynb  smooth_inference.ipynb  tessera.ipynb  test_focal_loss.py  torchgeo_embeddings.ipynb  torchgeo_segmentation_simple.ipynb  train_building_footprints_usa.ipynb  train_landcover_classification.ipynb  train_segmentation_model.ipynb  train_timm_classifier.ipynb  train_timm_segmentation.ipynb  (+6 more)
extract/: index.html
faq/: index.html
foundation_models/: index.html
ftw/: index.html
geo_agents/: index.html
geoai/: __init__.py  auto.py  canopy.py  caption.py  change_detection.py  classify.py  clay.py  cli.py  clip_classify.py  common.py  detectron2.py  dinov3.py  dinov3_finetune.py  download.py  embeddings.py  esrgan.py  extract.py  foundation_models.py  ftw.py  geoai.md  geoai.py  geodeep.py  hf.py  index.html  inference.py  landcover_train.py  landcover_utils.py  main.py  map_widgets.py  moondream.py  networks.py  object_detect.py  onnx.py  pipeline.py  pointcloud.py  preprocess.py  prithvi.py  recognize.py  rfdetr.py  sam.py  (+13 more)
geoai-mcp-server/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
geoai-mcp-server/src/geoai_mcp_server/: __init__.py  __main__.py  config.py  server.py
geoai-mcp-server/src/geoai_mcp_server/schemas/: __init__.py  tool_schemas.py
geoai-mcp-server/src/geoai_mcp_server/utils/: __init__.py  error_handling.py  file_management.py  validation.py
geoai-mcp-server/tests/: __init__.py  conftest.py  test_schemas.py  test_server.py  test_utils.py
geodeep/: index.html
hf/: index.html
inference/: index.html
installation/: index.html
landcover_train/: index.html
landcover_utils/: index.html
map_tools/: index.html
map_widgets/: index.html
moondeream/: index.html
moondream/: index.html
multiclean/: index.html
networks/: index.html
object_detect/: index.html
onnx/: index.html
paper/: paper.bib  paper.md
prithvi/: index.html
qgis_plugin/: README.md  index.html  install.py  install.sh  package_plugin.py
recognize/: index.html
rfdetr/: index.html
sam/: index.html
scripts/: convert_notebooks.py  object_detection_nwpu.py  prepare_dc_impervious_data.py  preprocess_dales_ptv3.py  train_nwpu_detection.py  train_ptv3_dales.py  train_s2_water.py  train_whu_building.py
search/: search_index.json
segment/: index.html
segmentation/: index.html  segmentation.md
sr/: index.html
tessera/: index.html
tests/: __init__.py  conftest.py  create_test_data.py  test_agents_models.py  test_auto.py  test_canopy.py  test_caption.py  test_change_detection.py  test_classify.py  test_clay.py  test_clay_simple.py  test_cli.py  test_clip_classify.py  test_clip_segmentation.py  test_detectron2.py  test_dinov3.py  test_dinov3_finetune.py  test_display_training_tiles_origin.py  test_download.py  test_download_validation.py  test_embeddings.py  test_embeddings_aef.py  test_esrgan.py  test_extract.py  test_extract_classes.py  test_fixtures.py  test_foundation_models.py  test_freeze_encoder.py  test_geoai.py  test_geodeep.py  test_hf.py  test_inference.py  test_instance_segmentation.py  test_landcover_train.py  test_landcover_utils.py  test_lazy_import.py  test_map_widgets.py  test_merge_tiles.py  test_minimax_provider.py  test_moondream.py  (+31 more)
timeseries/: index.html
timm_regress/: index.html
timm_segment/: index.html
timm_train/: index.html
train/: index.html
usage/: index.html
(+408 files in other folders)
