[project]
name = "geoai-py"
version = "0.6.0"
dynamic = [
    "dependencies",
]
description = "A Python package for using Artificial Intelligence (AI) with geospatial data"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "geoai",
]
license = {text = "MIT License"}
authors = [
  {name = "Qiusheng Wu", email = "giswqs@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.entry-points."console_scripts"]
geoai = "geoai.cli:main"

[tool]
[tool.setuptools.packages.find]
include = ["geoai*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
extra = ["overturemaps"]

[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.6.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "geoai/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/opengeos/geoai"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"