[project]
name = "geoai-py"
version = "0.35.0"
dynamic = [
    "dependencies",
]
description = "A Python package for using Artificial Intelligence (AI) with geospatial data"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "geoai",
]
license = {text = "MIT License"}
authors = [
  {name = "Qiusheng Wu", email = "giswqs@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.entry-points."console_scripts"]
geoai = "geoai.cli:main"

[tool]
[tool.setuptools.packages.find]
include = ["geoai*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
extra = ["overturemaps", "torchange", "lightly-train", "multiclean", "omnicloudmask", "omniwatermask", "smoothify", "geodeep"]
building = ["buildingregulariser"]
agents = ["strands-agents", "strands-agents-tools", "strands-agents[ollama]", "strands-agents[anthropic]", "strands-agents[openai]"]
onnx = ["onnx", "onnxruntime<1.24"]
sr = ["opensr-model"]
geodeep = ["geodeep"]
geodeep-gpu = ["geodeep", "onnxruntime-gpu<1.24"]

[tool.uv]
# geodeep hard-depends on onnxruntime (CPU), which shadows onnxruntime-gpu
# when both are installed. This override prevents the CPU-only onnxruntime
# from being installed, letting onnxruntime-gpu (which provides the same
# Python module with CUDA support) be used instead.
# See: https://github.com/uav4geo/GeoDeep/issues/7
override-dependencies = ["onnxruntime ; sys_platform == 'never'"]


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.35.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "geoai/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/opengeos/geoai"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
